# zero-2.0

./: .gitmodules  LICENSE  README.md  file.txt
contract/: .gitignore  README.md  buildnote.md  fn.md  foundry.toml  makefile  remappings.txt
contract/cache/: solidity-files-cache.json
contract/docs/: ZeroCollateralSystem.md
contract/script/: DEploycustom.s.sol  Deploy.s..sol  Deploy.s.sol  Deploy.sol  DeployAvalanche.s.sol  DeployEular.s.sol  DeployEularSwap.s.sol  DeploySync.s.sol  DeployTeasury.s.sol  Deployccip.s.sol  Deployhedera.s.sol  Deploysonic.s.sol  contractsconfig.s.sol  deployReputation.s.sol  interaction.s.sol
contract/src/Euler/: ArbitriageEngine.sol  FlashArbitriageEngine.sol  Treasury.sol  design.md
contract/src/Interface/: IAuction.sol  ICarRegistry.sol  IFee.sol  IInitFunction.sol  IMerkleVerifier.sol  IProfile.sol  IProofSync.sol  IReputation.sol  IStateManager.sol  ISync.sol  IZeronft.sol
contract/src/Permission/: BrandPermissionManager.sol  PermissionManager.sol
contract/src/chainlink/: ccip.sol  function.sol  initFunction.sol  init_function.sol  merkleVerifier.sol  merkle_verifier.sol  messaging.sol  messenging.sol  proofSync.sol  state_check_function.sol  sync_function.sol
contract/src/core/: State.sol  auction.sol  car_registry.sol  fee.sol  merkle_verifier.sol  profile.sol  registry.sol  reputation.sol  state.sol
contract/src/libs/: Eular.sol  OracleCloneLib.sol  PermissionModifier.sol  merkle-proofs.sol  transfer.sol
contract/src/oracle/: CarOracle.sol  Oracle.sol
contract/src/tokens/: ZeroNFT.sol
contract/src/zeroNFT/: ZeroNFT.sol
contract/test/: BaseTest.t.sol  FlashArbitrageEngineTest.t.sol  MultiVaultTest.t.sol  ZeroNFT.t.sol  ccip.t.sol  gameplan.md  intergrationtest.t.sol  merkleverifier.t.sol  registry.t.sol  sampleTest.t.sol  stateManager.t.sol  test.md
contract/test/mocks/: IUSDC.sol
frontend/: .dockerignore  .eslintrc.json  .gitignore  AUCTION_REGISTRATION_README.md  BRAND_REGISTRATION_README.md  Contract Bugs.md  Dockerfile  README.md  SAMPLE_DATA_README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/.cursor/rules/: package-manager.mdc
frontend/src/app/: base.css  client-body.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/components/: AdminSubscriptionSection.tsx  ArgumentsSection.tsx  OracleConfigSection.tsx  StakeSection.tsx  TransactionError.tsx  TransactionHash.tsx  ValidationErrors.tsx  auction-card.tsx  auction-grid-client.tsx  auction-grid.tsx  auction-registration-form.tsx  auth-guard.tsx  auth-initializer.tsx  brand-registration-form.tsx  brand-status-badge.tsx  brands-search.tsx  car-card.tsx  cargrid.tsx  connect-modal.tsx  custom-btn.tsx  custom-coinbase-swap.tsx  footer.tsx  header.tsx  hero.tsx  listing-client-rtk.tsx  listing-client.tsx  login-modal.tsx  profile-banner.tsx  proof-modal.tsx  proof-transaction.tsx  r_header.tsx  stake-button.tsx  swap-tokens-chains.ts  swap-widget.tsx  transaction-receipt-modal.tsx
frontend/src/hooks/: index.tsx  useBrandsData.ts  useChain.ts  useEulerVaults.ts  useGraph.ts  useModal.ts  (+2 more)
zero/graph/: networks.json  package.json  schema.graphql  subgraph.yaml
zk/: .dockerignore  .env  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  Dockerfile.alternative  Dockerfile.backend  LOCAL_DEVELOPMENT.md  QUICK_START.md  README.md  api-examples.md  check-network.bat  check-network.sh  docker-compose.yml  entrypoint.sh  makefile  rebuild-docker-resilient.bat  rebuild-docker-resilient.sh  rebuild-docker.bat  rebuild-docker.sh  setup-local.bat  setup-local.sh  test-api.bat  test-api.sh
zk/.docker-cache/: index.json
zk/db/: .env  Cargo.toml  README.md  cars-full.json  seed-more.sql  seed.sql
zk/db/data/: cars.json
zk/db/entity/: Cargo.toml
zk/db/entity/src/: auction.rs  bid.rs  car.rs  comment.rs  lib.rs  mod.rs  prelude.rs  saved_auction.rs  sea_orm_active_enums.rs
zk/db/migration/src/: m20220101_000001_create_table.rs
zk/db/src/: auction.rs  bid.rs  car.rs  cars.json  comment.rs  lib.rs  main.rs  saved_auction.rs  seeder.rs
zk/frontend/: Dockerfile  nginx.conf
zk/host/: .env  Cargo.toml
zk/host/src/: auction.rs  auth.rs  bid.rs  car.rs  comment.rs  jwt.rs  lib.rs  main.rs  overall.rs  redis.rs  saved_auction.rs
zk/methods/: Cargo.toml
zk/methods/car/: Cargo.toml
zk/methods/core/: Cargo.toml
zk/methods/core/src/: array.rs  lib.rs
(+284 files in other folders)
