[package]
name = "car-auction-core"
version = "0.1.0"
edition = "2021"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
risc0-zkvm = { version = "^2.1.0", default-features = false, features = ['std'] }
sha2 = "0.10.9"
tinyvec = "1.9.0"
risc0-zkp = { version = "2.0.1", features = ["std"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
chrono = "0.4.41"
arrayvec = "0.7.6"

[patch.crates-io]
# Adding RISC Zero keccak precompile support
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
